--- a/.github/workflows/bsim-tests.yaml
+++ b/.github/workflows/bsim-tests.yaml
@@ -33,7 +33,6 @@ concurrency:
 
 jobs:
   bsim-test:
-    if: github.repository_owner == 'zephyrproject-rtos'
     runs-on:
       group: zephyr-runner-v2-linux-x64-4xlarge
     container:
@@ -173,26 +172,6 @@ jobs:
           junitparser merge --glob "./bsim_*/*bsim_results.*.xml" "./twister-out/twister.xml" junit.xml
           junit2html junit.xml junit.html
 
-      - name: Upload Unit Test Results in HTML
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: HTML Unit Test Results
-          if-no-files-found: ignore
-          path: |
-            junit.html
+      - name: Setup Debug Session
+        uses: csexton/debugger-action@master
 
-      - name: Publish Unit Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v2
-        with:
-          check_name: Bsim Test Results
-          files: "junit.xml"
-          comment_mode: off
-
-      - name: Upload Event Details
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: event
-          path: |
-            ${{ github.event_path }}
